--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-# .htaccess file
+<IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteBase /
-RewriteCond %{REQUEST_URI} ^system.*
-RewriteRule ^(.*)$ /index.php/$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteCond $1 !^(index\.php|robots\.txt)
+RewriteRule ^(.*)$ index.php?/$1 [L]
+</IfModule>
